adjusted colors (black) and spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -8,24 +8,23 @@ html{
 }
 
 body {
-    margin: 10px;
-    width: auto;
+  margin-left: 10px;
 }
 nav ul, footer ul {
     display: flex;
     justify-content: space-around;
-    padding: auto;
+    padding: 0;
     list-style: none;
     font-weight: 400;
     line-height: 1.2em;
 }
 nav ul li, footer ul li {
-    display: inline;
+    display: block;
     margin-right: 0;
 }
 a {
     text-decoration: none;
-    color: #1FB98E;
+    color: inherit;
 }
 a:hover {
     font-weight: 900;
@@ -52,5 +51,9 @@ p {
 }
 footer {
     border-top: 1px solid #d5d5d5;
-    font-size: .8em;
+    font-size: .6em;
+    color: inherit;
+}
+.aboutme {
+  color: #3566B1;
 }
